<resources>
    <string name="app_name">IF-Portal</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="sign_in">Sign In</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_role">Input Role</string>
    <string name="login_fail">FaileD!</string>
    <string name="btn_simpan_text">Simpan</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_home">HOME</string>
    <string name="btn_home">Home</string>
    <string name="btn_frs_prs">FRS/PRS</string>
    <string name="btn_pengumuman">Pengumuman</string>
    <string name="btn_pertemuan">Pertemuan</string>
    <string name="search">Search</string>
    <string name="tags">Tags:</string>

    <string name="admin">admin</string>
    <string name="dosen">dosen</string>
    <string name="mahasiswa">mahasiswa</string>

    <string name="error_input">Email, password atau role tidak sesuai</string>
    <string name="timeout">Mohon dicoba lagi</string>


    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sign_out">Apakah anda ingin keluar dari akun ini?</string>
    <string name="btn_iya">Iya</string>
    <string name="btn_tidak">Tidak</string>
    <string name="judul_add_user">Add User</string>
    <string name="fragment_jadwal_dosen_hari_text">Hari</string>
</resources>