<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo_if"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/iflogo"
        android:layout_centerHorizontal="true">
    </ImageView>

    <LinearLayout
        android:background="@drawable/login_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/iv_logo_if"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/normal_text"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/input_background"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="10dp">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/email">-->
<!--            </TextView>-->

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:background="@null"
                android:textSize="15sp"
                android:layout_margin="3dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/input_background"
            android:layout_marginBottom="12dp">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/password">-->
<!--            </TextView>-->

            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:background="@null"
                android:textSize="15sp"
                android:layout_margin="3dp">
            </EditText>
        </LinearLayout>

        <Spinner
            android:id="@+id/dropdown_roles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

        </Spinner>

    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in">
    </Button>

</RelativeLayout>